# sc3

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  __init__.py  _global.py  _hackprovisorio_borrar.py  _specialindex.py  buffer.py  builtins.py  bus.py  client.py  clock.py  clocks.py  clocks2.py  clocks3.py  demand.py  dependancy.py  engine.py  env.py  envgen.py  event.py  filter.py  functions.py  graphparam.py  inout.py  line.py  listpatterns.py  main.py  model.py  netaddr.py  node.py  nodeparam.py  noise.py  operand.py  opugens.py  osc.py  osc_thread.py  oscserver.py  pan.py  (+18 more)
.github/workflows/: codeql-analysis.yml  python-tests.yml
devtools/: imports.py  sc_working_commit.txt
docs/: _config.yml  _toc.yml  api.md  conf.py  contribute.rst  glossary.rst  index.rst  intro.md
docs/guides/: absobject.md  event.rst  midi.rst  nonrealtime.rst  oscfunc.md  oscfunc.rst  patterns.md  routine.rst  server.rst  synthdef.rst
docs/source/: basicroutine.rst  basicserver.rst  conf.py  configuration.rst  glossary.rst  index.rst  nonrealtime.rst  requirements.txt
looseparts/: _systemsynthdefs.py  dendrite.py  dependancy.py  server.py
sc3/: __init__.py  __main__.py  _all.py  _global.py  _hackprovisorio_borrar.py  _specialindex.py  all.py  all_nrt.py  buffer.py  builtins.py  bus.py  clock.py  demand.py  dependancy.py  engine.py  env.py  envgen.py  event.py  filter.py  functions.py  graphparam.py  infougens.py  inout.py  line.py  listpatterns.py  main.py  model.py  netaddr.py  node.py  noise.py  operand.py  osc.py  oscinterface.py  oscserver.py  pan.py  pattern.py  patterns.py  responsedefs.py  rest.py  server.py  (+9 more)
sc3/base/: _hooks.py  _importall.py  _knownpaths.py  _midiinterface.py  _oscinterface.py  _osclib.py  _oscmatch.py  _taskq.py  absobject.py  all.py  builtins.py  classlibrary.py  clock.py  functions.py  main.py  midi.py  model.py  netaddr.py  operand.py  oscinterface.py  platform.py  play.py  random.py  responders.py  responsedefs.py  stream.py  systemactions.py  utils.py
sc3/patterns/: listpatterns.py
sc3/seq/: _event2dt.py  _eventkeys.py  _taskq.py  all.py  clock.py  event.py  eventstream.py  patch.py  pattern.py  pausestream.py  rest.py  scale.py  (+1 more)
tests/: __main__.py  test_buffer.py  test_bundle.py  test_bus.py  test_clock_nrt.py  test_clock_rt.py  test_entrypoint.py  test_funcpatterns.py  test_function.py  test_imports.py  test_model.py  test_multichannel.py  test_node.py  test_nrt.py  test_oscfunc.py  test_play.py  test_routine.py  test_sockets.py  test_spindex.py  test_stream.py  test_synthdef.py  test_timepatterns.py  test_timing.py  test_ugen.py  test_valuepatterns.py
(+93 files in other folders)
