[tool.poetry]
name = "sc3"
version = "0.1.0"
description = "\"SuperCollider client library for Python\""
authors = ["Craig Fiedorek <rcraigfiedorek@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
